--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 #Kotlin
 kotlin.code.style=official
-kotlin.js.compiler=ir
+kotlin.mpp.enableCInteropCommonization=true
+org.jetbrains.compose.experimental.macos.enabled=true
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
