feat: Integrate KUpdater Swift Package and Generate Def Files
This commit integrates the `KUpdater` Swift package as a dependency and implements the generation of `.def` files for various iOS targets. It also updates the initialization of `IOSCheckForUpdate`, configures the project for dependency management, and cleans up unnecessary files.

-   Added `KUpdater` as a Swift package dependency.
-   Created a `GenerateDefFilesTask` to automatically generate `.def` files for `iosX64`, `iosArm64`, and `iosSimulatorArm64`.
- Added missing file `KUpdater-Swift.h` for ios and simulator target
-   Modified `IOSCheckForUpdate.kt` to allow optional `countryCode` and `appStoreId` in the `init` function.
-   Updated `build.gradle.kts`:
    -   Removed the `swiftklib` plugin.
    -   Updated the version to `1.0.3`.
    -   Configured Kotlin/Native compilations to use generated `.def` files.
-   Added `Package.resolved` and updated `project.pbxproj` to manage the Swift package.
-   Removed `Podfile` and `kupdater.swift`.
-   Updated `.gitignore` to exclude generated def files.
-   Updated the minimum supported iOS version in `README.MD` to 12+.
- Updated version of `maven-publish` and added dependency for `startupRuntime`.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,15 @@ Pods/
 /simple/composeApp/release/
 /simple/iosApp/Podfile.lock
 /simple/iosApp/Podfile
+/composeCheckForUpdate/native/iosArm64.def
+/composeCheckForUpdate/native/iosSimulatorArm64.def
+/composeCheckForUpdate/native/iosX64.def
+/composeCheckForUpdate/native/macosArm64.def
+/composeCheckForUpdate/native/macosX64.def
+/composeCheckForUpdate/native/tvosArm64.def
+/composeCheckForUpdate/native/tvosSimulatorArm64.def
+/composeCheckForUpdate/native/tvosX64.def
+/composeCheckForUpdate/native/watchosArm32.def
+/composeCheckForUpdate/native/watchosArm64.def
+/composeCheckForUpdate/native/watchosSimulatorArm64.def
+/composeCheckForUpdate/native/watchosX64.def
