--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,8 +4,10 @@ compose = "1.7.3"
 agp = "8.9.0"
 androidx-activityCompose = "1.10.1"
 androidx-uiTest = "1.7.8"
-maven-publish = "0.30.0"
+maven-publish = "0.31.0"
 appUpdateKtx = "2.1.0"
+startupRuntime = "1.2.0"
+
 
 
 
@@ -16,6 +18,7 @@ androidx-activityCompose = { module = "androidx.activity:activity-compose", vers
 androidx-uitest-testManifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-uiTest" }
 androidx-uitest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-uiTest" }
 app-update-ktx = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "appUpdateKtx" }
+androidx-startup-runtime = { module = "androidx.startup:startup-runtime", version.ref = "startupRuntime" }
 
 [plugins]
 
