--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,12 @@
 [versions]
-kotlin = "2.1.21"
-compose = "1.8.1"
-agp = "8.10.1"
-androidx-activityCompose = "1.10.1"
-androidx-uiTest = "1.8.2"
-maven-publish = "0.31.0"
+kotlin = "2.2.20"
+compose = "1.9.1"
+agp = "8.13.0"
+androidx-activityCompose = "1.11.0"
+androidx-uiTest = "1.9.3"
+maven-publish = "0.34.0"
 appUpdateKtx = "2.1.0"
+savedstateCompose = "1.3.5"
 
 
 
@@ -17,6 +18,7 @@ androidx-activityCompose = { module = "androidx.activity:activity-compose", vers
 androidx-uitest-testManifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-uiTest" }
 androidx-uitest-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-uiTest" }
 app-update-ktx = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "appUpdateKtx" }
+savedstate-compose = { module = "org.jetbrains.androidx.savedstate:savedstate-compose", version.ref = "savedstateCompose" }
 
 [plugins]
 
