--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,15 @@
 [versions]
+componentsResources = "1.10.0"
+foundation = "1.10.0"
 kotlin = "2.3.0"
 compose = "1.10.0"
-agp = "8.13.2"
+agp = "9.0.0"
 androidx-activityCompose = "1.12.2"
-maven-publish = "0.34.0"
+material3 = "1.10.0-alpha05"
+maven-publish = "0.35.0"
 appUpdateKtx = "2.1.0"
+runtime = "1.10.0"
+uiToolingPreview = "1.10.0"
 
 
 
@@ -14,6 +19,11 @@ appUpdateKtx = "2.1.0"
 
 androidx-activityCompose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 app-update-ktx = { group = "com.google.android.play", name = "app-update-ktx", version.ref = "appUpdateKtx" }
+components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "componentsResources" }
+material3 = { module = "org.jetbrains.compose.material3:material3", version.ref = "material3" }
+foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "foundation" }
+runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "runtime" }
+ui-tooling-preview = { module = "org.jetbrains.compose.ui:ui-tooling-preview", version.ref = "uiToolingPreview" }
 
 [plugins]
 
@@ -21,6 +31,5 @@ multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotl
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 android-application = { id = "com.android.application", version.ref = "agp" }
-android-library = { id = "com.android.library", version.ref = "agp" }
+androidKotlinMultiplatformLibrary = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
 maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "maven-publish" }
-kotlin-cocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
